# googlysync

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  Taskfile.yaml  buf.gen.yaml  buf.yaml  go.mod  go.sum
.github/workflows/: ci.yml
cmd/drive-ui/: main.go
cmd/googlysync/: BUILD.bazel  main.go  providers.go  tui.go  wire.go  wire_gen.go
configs/: dev.json
docs/: GooglySync-tech-stack.md  tech-stack-map.md
internal/auth/: BUILD.bazel  auth.go  auth_test.go  oauth.go
internal/config/: config.go
internal/daemon/: daemon.go
internal/fswatch/: BUILD.bazel  events.go  fswatch.go
internal/ipc/: BUILD.bazel  events.go  server.go  time.go
internal/status/: status.go
internal/storage/: BUILD.bazel  store.go  store_test.go
internal/sync/: BUILD.bazel  queue.go  sync.go
proto/: BUILD.bazel  auth.proto  common.proto  daemon.proto  status.proto
