module(
    name = "googlysync",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.49.0")
bazel_dep(name = "gazelle", version = "0.36.0")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "29.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Bazel uses a supported Go SDK until rules_go supports Go 1.25.x.
go_sdk.download(version = "1.24.11")

bazel_dep(name = "rules_shell", version = "0.4.0")
bazel_dep(name = "platforms", version = "0.0.11")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_charmbracelet_bubbletea",
    "com_github_fsnotify_fsnotify",
    "com_github_google_wire",
    "com_github_pressly_goose_v3",
    "com_github_zalando_go_keyring",
    "in_gopkg_natefinch_lumberjack_v2",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_oauth2",
    "org_modernc_sqlite",
    "org_uber_go_zap",
)
