load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "fswatch",
    srcs = ["fswatch.go"],
    importpath = "github.com/sandeepkv93/googlysync/internal/fswatch",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/status",
        "@com_github_fsnotify_fsnotify//:fsnotify",
        "@org_uber_go_zap//:zap",
    ],
)
