load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "ipc",
    srcs = [
        "client.go",
        "server.go",
    ],
    importpath = "github.com/sandeepkv93/googlysync/internal/ipc",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/ipc/gen",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_uber_go_zap//:zap",
    ],
)
