load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "sync",
    srcs = [
        "queue.go",
        "sync.go",
    ],
    importpath = "github.com/sandeepkv93/googlysync/internal/sync",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/fswatch",
        "//internal/status",
        "//internal/storage",
        "@org_uber_go_zap//:zap",
    ],
)
